# trak_manual

./: .gitignore  README.md  assignments.ipynb  compute_grads.py  config.py  convert_pyarrow.py  data.py  debug_long_read.ipynb  delete_dups.ipynb  featurize.py  featurize_new_zarr.ipynb  featurize_new_zarr_id.ipynb  featurize_raw.py  finalize.py  hello.py  is_output_loss.ipynb  launch_workers.py  main.py  main_grads.py  main_scores.py  model.py  pres_plot_dp.ipynb  pyproject.toml  read_table.ipynb  requirements.pkgs.txt  requirements.txt  scoring.ipynb  scoring_engineering.ipynb  scoring_grads.ipynb  scoring_prepare.ipynb  test_projector.py
config/: amd_experiment.py  cifar100_experiment.py  config.py  dr_experiment.py  fitzpatrick_experiment.py  food101_experiment.py  glaucoma_experiment.py  pcam_experiment.py  stl10_experiment.py
convert/: convert_pyarrow.py  pyproject.toml
featurize/: compute_grads.py  data.py  featurize.py  featurize_new_pyarrow.ipynb  install.sh  main_grads.py  main_grads_clip.py  main_grads_zsc.py  model.py  pyproject.toml  remove_training.sh
featurize/config/: config.py
featurize/notebooks/: scoring_grads.ipynb
notebooks/: pres_plot_dp.ipynb  read_table.ipynb
old/: compute_scores.py  finalize.py  main_scores.py
zsc_grads/: README.md  data.py  main_grads_zsc.py  model.py  pyproject.toml  trak_manual.code-workspace
