[project]
name = "trak-manual"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "boto3>=1.35.88",
    "cloudpathlib>=0.21.0",
    "dask[array]",
    "hydra-core>=1.3.2",
    "ipykernel>=6.29.5",
    "ipywidgets>=8.1.5",
    "open-clip-torch>=2.30.0",
    "pandas>=2.2.3",
    "pyarrow>=19.0.1",
    "rich>=13.9.4",
    "s3fs>=2024.10.0",
    "setuptools>=75.3.0",
    "tqdm>=4.67.1",
    "training",
    "webdataset>=0.2.100",
    "zarr>=3",
]

[tool.uv.sources]
training = { path = "/git/datacomp/training" }
