[project]
name = "trak-manual"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "boto3>=1.35.88",
    "clip-benchmark",
    "cloudpathlib>=0.21.0",
    "dask[array]",
    "fast-jl-binary>=0.1.3.1",
    "hydra-core>=1.3.2",
    "ipykernel>=6.29.5",
    "ipywidgets>=8.1.5",
    "matplotlib>=3.10.3",
    "open-clip-torch>=2.30.0",
    "pandas>=2.2.3",
    "pip>=25.1.1",
    "pyarrow>=19.0.1",
    "rich>=13.9.4",
    "s3fs>=2024.10.0",
    "scikit-learn>=1.7.1",
    "setuptools>=75.3.0",
    "submitit>=1.5.3",
    "tqdm>=4.67.1",
    "training",
    "traker",
    "webdataset>=0.2.100",
    "zarr>3.0.1",
]

[tool.uv.sources]
training = { path = "../../datacomp/training" }
traker = { path = "/home/c02dawa/CISPA-az6/pdpl-2025/code/trak" }
clip-benchmark = { git = "https://github.com/dwahdany/CLIP_benchmark.git" }
